<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg2"
    android:layout_marginTop="-20dp"
    android:layout_marginStart="-10dp"
    android:layout_marginEnd="-10dp"
    android:layout_marginBottom="-10dp"
    tools:context=".view.register.RegisterFragment">


    <androidx.cardview.widget.CardView
        android:id="@+id/cvUserImageUpload"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:cardCornerRadius="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="128dp"
        app:cardBackgroundColor="@color/labelBG">

            <TextView
                android:id="@+id/txtRegisterPhoto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                style="@style/title_default"
                android:text="@string/title_photo"
                android:textSize="40sp"
                android:textColor="@color/white"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/cvRegisterImage"
                android:elevation="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cvUserImageUpload"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="58dp"
        android:layout_marginEnd="58dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edtRegisterName"
            android:layout_marginBottom="10dp"
            android:hint="@string/title_name"
            android:textColor="@color/white"
            android:maxLength="20"
            style="@style/edt_default"/>
        <EditText
            android:id="@+id/edtRegisterEmail"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"
            android:hint="@string/title_email"
            style="@style/edt_default"/>
        <EditText
            android:id="@+id/edtRegisterPassword"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"
            android:hint="@string/title_password"
            android:inputType="textPassword"
            android:maxLength="20"
            style="@style/edt_default"/>
        <EditText
            android:id="@+id/edtRegisterRepeatPassword"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"
            android:hint="@string/title_repeatpassword"
            android:inputType="textPassword"
            android:maxLength="20"
            style="@style/edt_default"/>

        <Button
            android:id="@+id/btnRegisterConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_confirm"
            app:cornerRadius="15dp"
            style="@style/button_default"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>