<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg3"
    tools:context=".view.lobby.LobbyFragment">

    <ImageButton
        android:id="@+id/btnLobbyLogout"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_margin="16dp"
        android:src="@drawable/ic_baseline_logout_24"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llLobbyProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="160dp"
            android:layout_height="160dp"
            app:cardCornerRadius="180dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivLobbyUserImage"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@drawable/persondefault"
                />
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="6dp"
            app:cardBackgroundColor="@color/white">
            <TextView
                android:id="@+id/txtLobbyUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_gravity="center_vertical"
                style="@style/title_default"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                tools:text="Nome"/>
        </androidx.cardview.widget.CardView>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/llLobbyProfile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical">
        <Button
            android:id="@+id/btnRoomEntered"
            android:visibility="gone"
            style="@style/button_default"
            app:cornerRadius="15dp"
            tools:visibility="visible"
            android:layout_marginBottom="5dp"
            android:text="Você está na sala xxxxxx"/>
        <EditText
            android:id="@+id/edtLobbyRoomID"
            style="@style/edt_default"
            android:textColor="@color/white"
            android:maxLength="15"
            android:layout_marginBottom="5dp"
            android:hint="@string/title_room_id"/>
        <Button
            android:id="@+id/btnLobbyEnterRoom"
            style="@style/button_default"
            app:cornerRadius="15dp"
            android:layout_marginBottom="5dp"
            android:text="@string/title_enter"/>
        <Button
            android:id="@+id/btnLobbyCreateNewRoom"
            style="@style/button_default"
            app:cornerRadius="15dp"
            android:layout_marginBottom="5dp"
            android:text="@string/title_create_new_room"/>
        <Button
            android:id="@+id/btnLobbyMyStatus"
            app:cornerRadius="15dp"
            style="@style/button_default"
            android:layout_marginBottom="5dp"
            android:text="@string/title_my_status"/>

        <ProgressBar
            android:id="@+id/progressLoadCreatingRoom"
            android:visibility="gone"
            tools:visibility="visible"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txtCreatingYourRoom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible"
            android:text="@string/title_creating_your_room"
            style="@style/title_default"/>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>